# Graphics

./: CMakeLists.txt  Camera.cpp  Camera.h  Light.cpp  Light.h  PointLight.h  SceneObject.cpp  SceneObject.h  Shader.h  Spotlight.cpp  Spotlight.h  main.cpp
shaders/: DirectionalLight.frag  Gooch.frag  Phong.frag  Phong.vert  PointLight.frag  SpotLight.frag
